--- a/CrossoutLogViewer.GUI/Navigation/UserPage.xaml
+++ b/CrossoutLogViewer.GUI/Navigation/UserPage.xaml
@@ -25,7 +25,7 @@
         <Grid Grid.Row="1"
               Grid.Column="2">
             <GroupBox Header="Weapons"
-                      Style="{DynamicResource GroupBox}">
+                      Style="{DynamicResource GroupBox.Border}">
                 <ListBox x:Name="ListBoxWeapons"
                          ItemContainerStyle="{DynamicResource ListBoxHideSelection}"
                          Background="Transparent">
@@ -37,7 +37,7 @@
                 </ListBox>
             </GroupBox>
             <GroupBox Header="Stripes"
-                      Style="{DynamicResource GroupBox}"
+                      Style="{DynamicResource GroupBox.Border}"
                       Grid.Row="1">
                 <ListBox x:Name="ListBoxStripes"
                          ItemContainerStyle="{DynamicResource ListBoxHideSelection}"
