--- a/CrossoutLogViewer.GUI/App.xaml
+++ b/CrossoutLogViewer.GUI/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="CrossoutLogView.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:behaviors="http://metro.mahapps.com/winfx/xaml/shared"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              Startup="App_Start">
@@ -11,7 +11,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Teal.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Cobalt.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <Style x:Key="Header"
@@ -60,9 +60,9 @@
                         Value="DemiBold" />
             </Style>
             
-            <Style x:Key="GroupBox"
+            <Style x:Key="GroupBox.TitleBar"
                    TargetType="{x:Type GroupBox}"
-                   BasedOn="{StaticResource {x:Type GroupBox}}">
+                   BasedOn="{StaticResource MahApps.Styles.GroupBox}">
                 <Setter Property="BorderBrush"
                         Value="{x:Null}" />
                 <Setter Property="BorderThickness"
@@ -71,6 +71,27 @@
                         Value="Transparent" />
                 <Setter Property="Padding"
                         Value="1" />
+                <Setter Property="Controls:ControlsHelper.CornerRadius"
+                        Value="3" />
+            </Style>
+
+            <Style x:Key="GroupBox.Border"
+                   TargetType="{x:Type GroupBox}"
+                   BasedOn="{StaticResource MahApps.Styles.GroupBox}">
+                <Setter Property="Background"
+                        Value="Transparent" />
+                <Setter Property="BorderThickness"
+                        Value="1" />
+                <Setter Property="BorderBrush"
+                        Value="{DynamicResource MahApps.Brushes.Accent}" />
+                <Setter Property="Padding"
+                        Value="1" />
+                <Setter Property="Controls:ControlsHelper.CornerRadius"
+                        Value="3" />
+                <Setter Property="Controls:HeaderedControlHelper.HeaderBackground"
+                        Value="Transparent" />
+                <Setter Property="Controls:HeaderedControlHelper.HeaderForeground"
+                        Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
             </Style>
 
             <Style x:Key="MetroWindowTitlebarColorStyle"
@@ -117,6 +138,80 @@
                         Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
             </Style>
 
+            <Style x:Key="Button.Borderless"
+                   BasedOn="{StaticResource MahApps.Styles.Button.Flat}"
+                   TargetType="{x:Type Button}">
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.SystemControlHighlightAltBaseLow}" />
+                <Setter Property="BorderBrush"
+                        Value="{DynamicResource MahApps.Brushes.Accent3}" />
+                <Setter Property="Foreground"
+                        Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+                <Setter Property="BorderThickness"
+                        Value="0" />
+                <Setter Property="Controls:ControlsHelper.CornerRadius"
+                        Value="3" />
+            </Style>
+            
+            <Style x:Key="Button.Free"
+                   BasedOn="{StaticResource MahApps.Styles.Button.Flat}"
+                   TargetType="{x:Type Button}">
+                <Setter Property="Background"
+                        Value="{DynamicResource MahApps.Brushes.ThemeBackground}" />
+                <Setter Property="BorderThickness"
+                        Value="0" />
+                <Setter Property="Controls:ControlsHelper.CornerRadius"
+                        Value="3" />
+                <Setter Property="Foreground"
+                        Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
+            </Style>
+
+            <Style x:Key="BorderStyle"
+                   TargetType="{x:Type Border}">
+                <Setter Property="BorderBrush"
+                        Value="{DynamicResource MahApps.Brushes.Gray8}" />
+                <Setter Property="BorderThickness"
+                        Value="1" />
+                <Setter Property="CornerRadius"
+                        Value="3" />
+                <Setter Property="Padding"
+                        Value="4,2" />
+            </Style>
+            
+            <Style x:Key="Button.Clear"
+                   BasedOn="{StaticResource MahApps.Styles.Button.Chromeless}"
+                   TargetType="{x:Type Button}">
+                <Setter Property="Content"
+                        Value="✕" />
+                <Setter Property="FontWeight"
+                        Value="Bold" />
+                <Setter Property="FontSize"
+                        Value="18" />
+                <Setter Property="Width"
+                        Value="{Binding ActualHeight}" />
+            </Style>
+            
+            <Style x:Key="Slider.DaysInMonth"
+                   BasedOn="{StaticResource MahApps.Styles.Slider.Win10}"
+                   TargetType="{x:Type Slider}">
+                <Setter Property="LargeChange"
+                        Value="7" />
+                <Setter Property="Maximum"
+                        Value="0" />
+                <Setter Property="Minimum"
+                        Value="-30" />
+                <Setter Property="Orientation"
+                        Value="Horizontal" />
+                <Setter Property="SmallChange"
+                        Value="1" />
+                <Setter Property="TickPlacement"
+                        Value="TopLeft" />
+                <Setter Property="TickFrequency"
+                        Value="7" />
+                <Setter Property="Value"
+                        Value="0" />
+            </Style>
+            
             <Style x:Key="CustomLightMetroWindowButtonStyle"
                    TargetType="{x:Type Button}"
                    BasedOn="{StaticResource MahApps.Styles.Button.MetroWindow.Light}">
