Use new GroupBox stlyes

--- a/CrossoutLogViewer.GUI/CollectedStatisticsWindow.xaml
+++ b/CrossoutLogViewer.GUI/CollectedStatisticsWindow.xaml
@@ -199,7 +199,7 @@
                     <Grid>
                         <UserControls:UserOverview x:Name="UserOverviewUsers" />
                         <GroupBox Header="Users"
-                                  Style="{DynamicResource GroupBox}"
+                                  Style="{DynamicResource GroupBox.TitleBar}"
                                   Grid.Row="1">
                             <StackPanel Orientation="Horizontal"
                                         VerticalAlignment="Center">
