--- a/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/MapsControl.xaml
@@ -35,31 +35,31 @@
               Grid.RowSpan="2">
             <local:UserOverview x:Name="UserOverview"
                                 Background="Transparent"/>
-            <GroupBox Header="Games"
-                      Style="{DynamicResource GroupBox.TitleBar}"
-                      Grid.Row="1"
-                      Grid.ColumnSpan="2">
-                <Grid>
-                    <local:GameListFilter x:Name="GameListFilter"
-                                          FilterChanged="GameListFilter_FilterChanged"
-                                          HorizontalAlignment="Stretch"/>
-                    <Button Content="Open Users"
-                            Style="{DynamicResource Button.Borderless}"
-                            Click="OpenUsersClick"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Grid.Column="1"/>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="95" />
-                    </Grid.ColumnDefinitions>
-                </Grid>
-            </GroupBox>
-            <local:PlayerGamesDataGrid x:Name="PlayerGamesDataGrid"
-                                       Grid.Row="2"
-                                       Grid.ColumnSpan="2" />
+            <local:ScrollableHeaderedControl x:Name="ScrollableHeaderedControl_Scroller"
+                                             Grid.Row="1">
+                <local:ScrollableHeaderedControl.HeaderContent>
+                    <GroupBox Header="Games"
+                              Style="{DynamicResource GroupBox.TitleBar}">
+                        <Grid>
+                            <local:GameListFilter FilterChanged="GameListFilter_FilterChanged"
+                                                  HorizontalAlignment="Stretch" />
+                            <Button Content="Open Users"
+                                    Style="{DynamicResource Button.Borderless}"
+                                    Click="OpenUsersClick"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"
+                                    Grid.Column="1" />
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="95" />
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </GroupBox>
+                </local:ScrollableHeaderedControl.HeaderContent>
+                
+                <local:PlayerGamesDataGrid/>
+            </local:ScrollableHeaderedControl>
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
