--- a/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/UserGamesControl.xaml
@@ -5,39 +5,53 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls"
              mc:Ignorable="d"
+             Loaded="UserControl_Loaded"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              BorderThickness="0"
              d:DesignHeight="450"
-             d:DesignWidth="800"
-             x:Name="gameView">
+             d:DesignWidth="800">
     <Grid>
-        <local:UserOverview x:Name="UserOverview" Height="Auto"/>
-
-        <GroupBox Header="Users"
-                  Style="{DynamicResource GroupBox.TitleBar}"
-                  Grid.Row="1">
-            <Grid>
-                <local:GameListFilter x:Name="GameListFilter"
-                                      FilterChanged="RefreshGamesFilter"
-                                      HorizontalAlignment="Stretch"/>
-                <Button Content="Open Users"
-                        Style="{DynamicResource Button.Borderless}"
-                        Click="OpenUsersClick"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Center"
-                        Grid.Column="1"/>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="95" />
-                </Grid.ColumnDefinitions>
-            </Grid>
-        </GroupBox>
-        <local:PlayerGamesDataGrid x:Name="DataGridGames"
-                                   Grid.Row="2" />
+        <local:UserOverview x:Name="UserOverview"
+                            Height="Auto" />
+        <local:ScrollableHeaderedControl Grid.Row="1">
+            <local:ScrollableHeaderedControl.HeaderContent>
+                <Grid>
+                    <Expander Header="Games"
+                              Controls:ControlsHelper.CornerRadius="4"
+                              Grid.ColumnSpan="2"
+                              IsExpanded="True"
+                              Margin="0,4,0,0">
+                            <local:PlayerGamesChart ItemsSource="{Binding ParticipationsFiltered}"
+                                                    Height="200" />
+                    </Expander>
+                    <local:GameListFilter FilterChanged="RefreshGamesFilter"
+                                          HorizontalAlignment="Stretch"
+                                          Grid.Row="1" />
+                    <Button Content="Open Users"
+                            Style="{DynamicResource Button.Borderless}"
+                            Click="OpenUsersClick"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            Grid.Row="1"
+                            Grid.Column="1" />
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="95" />
+                    </Grid.ColumnDefinitions>
+                </Grid>
+            </local:ScrollableHeaderedControl.HeaderContent>
+            <local:ScrollableHeaderedControl.Content>
+                <local:PlayerGamesDataGrid Grid.Row="2" />
+            </local:ScrollableHeaderedControl.Content>
+        </local:ScrollableHeaderedControl>
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
     </Grid>
