--- a/CrossoutLogViewer.GUI/Navigation/UserListPage.xaml
+++ b/CrossoutLogViewer.GUI/Navigation/UserListPage.xaml
@@ -7,36 +7,9 @@
       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
       xmlns:UserControls="clr-namespace:CrossoutLogView.GUI.Controls"
       mc:Ignorable="d"
+      Loaded="Page_Loaded"
       d:DesignHeight="450"
       d:DesignWidth="800"
       Title="UserListPage">
-    <Grid Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
-        <UserControls:UserOverview x:Name="UserOverviewUsers" />
-        <GroupBox Header="Users"
-                  Style="{DynamicResource GroupBox.TitleBar}"
-                  Grid.Row="1">
-            <StackPanel Orientation="Horizontal"
-                        VerticalAlignment="Center">
-                <TextBlock Text="Name"
-                           Style="{DynamicResource Content}"
-                           Margin="0,0,4,0"
-                           VerticalAlignment="Center" />
-                <TextBox Text="{Binding UserNameFilter, UpdateSourceTrigger=PropertyChanged}"
-                         Width="150"
-                         Controls:TextBoxHelper.AutoWatermark="True"
-                         Controls:TextBoxHelper.Watermark="Nickname"
-                         Controls:TextBoxHelper.ClearTextButton="True" />
-            </StackPanel>
-        </GroupBox>
-        <UserControls:UserDataGrid x:Name="UserListViewUsers"
-                                   OpenViewModelDoubleClick="UserOpenUserClick"
-                                   SelectionChanged="UserSelectUser"
-                                   SelectedIndex="0"
-                                   Grid.Row="2" />
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="68" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-    </Grid>
+    <UserControls:UsersListControl x:Name="UsersListControl"/>
 </Page>
